# codelite-2-nyayAI

./: readme.md  requirements.txt  start.sh
client/: components.json  package.json  pnpm-lock.yaml
client/app/: globals.css  layout.tsx  page.tsx
client/app/(root)/: layout.tsx
client/app/(root)/analysis/: page.tsx
client/components/: auth-dialog.tsx  voice-agent-panel.tsx
client/components/analysis/: md-components.tsx  risk-mark.tsx  risk-sidebar.tsx
client/lib/: annotations-store.ts  auth-context.tsx  negotiation-store.ts
livekit-voice-agent/: .env.local  agent.py  pyproject.toml
nyaya_ai/: .gitignore  README.md  __init__.py  main.py  pdf_to_markdown.py  requirements.txt  risk_engine.py  start.bat  start.sh  streamlit_app.py
nyaya_ai/agents/: __init__.py  clause_classifier.py  legal_retriever.py  negotiation_simulator.py  redline_generator.py  risk_detector.py  summary_agent.py
nyaya_ai/api/: README.md  __init__.py  app.py
nyaya_ai/api_outputs/20260221_224845/: executive_summary_20260221_224845.txt
nyaya_ai/api_outputs/20260221_235740/: executive_summary_20260221_235740.txt
nyaya_ai/api_outputs/20260222_005633/: executive_summary_20260222_005633.txt
nyaya_ai/api_outputs/20260222_022700/: executive_summary_20260222_022700.txt
nyaya_ai/api_outputs/20260222_024123/: executive_summary_20260222_024123.txt
nyaya_ai/examples/: example.py
nyaya_ai/orchestrator/: __init__.py  workflow.py
nyaya_ai/schemas/: __init__.py  models.py
nyaya_ai/utils/: retry_helper.py
server/: database.py  main.py  negotiation.py  pyproject.toml  requirements.txt
(+8 files in other folders)
